--- a/main.css
+++ b/main.css
@@ -2,12 +2,18 @@
 	background-color: rgb(150, 190, 255);
 	font-family: serif;
 
-	padding: 5px;
+	padding: 10px;
+
+	width: 50%;
+	margin: auto;
 }
 
 #block-of-info {
 	background-color: rgb(240, 240, 240);
 	font-family: serif;
 
-	padding: 5px;
+	padding: 10px;
+
+	width: 50%;
+	margin: auto;
 }
