--- a/main.css
+++ b/main.css
@@ -6,6 +6,9 @@
 
 	width: 50%;
 	margin: auto;
+	margin-bottom: 10px;
+
+	border: solid 3px;
 }
 
 #block-of-info {
@@ -16,4 +19,7 @@
 
 	width: 50%;
 	margin: auto;
+	margin-top: 10px;
+
+	border: solid 3px;
 }
