--- a/main.css
+++ b/main.css
@@ -1,11 +1,20 @@
 .title-block {
-	background: linear-gradient(to right, rgb(150, 190, 255), rgb(240, 240, 240));
-
-	padding: 10px;
-	padding-left: 55px;
+	background-color: rgb(150, 190, 255);
 
 	margin: auto;
 	margin-bottom: 3px;
+}
+
+.contact-info {
+	padding: 10px;
+
+	text-align: center;
+}
+
+.nav-menu {
+	padding: 10px;
+
+	text-align: center;
 }
 
 .section-block {
@@ -13,30 +22,38 @@
 
 	padding: 10px;
 
-	width: 18.5%;
-	height: 410px;
+	width: 98.5%;
+	height: 500px;
 	overflow-y: auto;
-	margin-top: 10px;
-
-	float: left;
-
+	margin-top: 10px;	
 }
 
-.section-text {
+.resume-container {
+	background-color: rgb(250, 250, 250);
+	width: 98.5%;
+
+	margin-top: 10px;
+
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 20px;
+}
+
+.block-text {
 	margin-left: 25px;
 
 	font-size: 0.9em;
 }
 
 .header1 {
-	font-size: 2em;
+	font-size: 2.5em;
 	font-weight: bold;
 	margin-top: 0.67em;
-	margin-bottom: 0.67em;
+	margin-bottom: 0em;
 }
 
 .header2 {
-	font-size: 1em;
+	font-size: 1.25em;
 	font-weight: bold;
 	margin-top: 1.33em;
 	margin-bottom: 1.33em;
@@ -45,13 +62,34 @@
 .header3 {
 	font-size: .83em;
 	font-weight: bold;
-	margin-top: 1.67em;
-	margin-bottom: 1.67em;
+	margin-top: 0.3em;
+	margin-bottom: 1.5em;
+}
+
+a:link, a:visited {
+	background-color: #00FFFFFF;
+	color: black;
+	padding: 10px 20px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+}
+
+a:hover, a:active {
+	background-color: #00FFFFFF;
+	color: white;
 }
 
 body {
 	background-color: rgb(240, 240, 240);
 
 	font-family: sans-serif;
-	font-size: 15pt;
+	font-size: 16pt;
+}
+
+#image-of-me {
+	float: left;
+	margin-left: 5px;
+	margin-right: 10px;
+	margin-bottom: 10px;
 }
