--- a/main.css
+++ b/main.css
@@ -4,7 +4,10 @@
 }
 
 .my-name {
-	background-color: rgb(250, 250, 250);
+	background-image: url("treeline.jpg");
+	background-repeat: no-repeat;
+	background-size: 100%;
+	background-position: bottom center;
 	padding: 30px;
 	padding-bottom: 50px;
 
@@ -12,15 +15,14 @@
 }
 
 .nav-menu {
-	background-color: rgb(150, 190, 255);
+	/*background-color: rgb(150, 190, 255);*/
+	background-color: rgb(35, 33, 37);
 	padding: 10px;
 
 	text-align: center;
 }
 
 .section-block {
-	background-color: rgb(250, 250, 250);
-
 	padding: 10px;
 	padding-top: 30px;
 
@@ -30,25 +32,49 @@
 }
 
 .resume-container {
-	background-color: rgb(250, 250, 250);
 	width: 98.5%;
 
-	padding-top: 30px;
 	padding-bottom: 5px;
-	padding-left: 20px;
+	padding-left: 40px;
 }
 
-.block-text {
+.section-text {
 	margin-left: 25px;
+	margin-right: 25px;
 
 	font-size: 0.9em;
 }
 
 .header1 {
-	font-size: 2.5em;
+	font-size: 4em;
 	font-weight: bold;
+
+	color: white;
+
 	margin-top: 0.67em;
 	margin-bottom: 0em;
+
+	text-shadow:
+			-1px -1px 0 #000,
+			1px -1px 0 #000,
+			-1px 1px 0 #000,
+			1px 1px 0 #000; 
+}
+
+.subheader {
+	font-size: 2em;
+	font-weight: bold;
+
+	color: white;
+
+	margin-top: 0em;
+	margin-bottom: 1.33em;
+
+	text-shadow:
+			-1px -1px 0 #000,
+			1px -1px 0 #000,
+			-1px 1px 0 #000,
+			1px 1px 0 #000; 
 }
 
 .header2 {
@@ -59,15 +85,15 @@
 }
 
 .header3 {
-	font-size: .83em;
+	font-size: 1.25em;
 	font-weight: bold;
-	margin-top: 0.3em;
-	margin-bottom: 1.5em;
+	margin-top: 1.33em;
+	margin-bottom: 0.33em;
 }
 
 a:link, a:visited {
 	background-color: #00FFFFFF;
-	color: black;
+	color: white;
 	padding: 10px 20px;
 	text-align: center;
 	text-decoration: none;
@@ -88,8 +114,8 @@ body {
 
 #about-me-img {
 	float: left;
-	margin-left: 5px;
-	margin-right: 10px;
+	margin-left: 25px;
+	margin-right: 25px;
 	margin-bottom: 10px;
 }
 
